style.css
/* ... */
.search-clear:hover {
    color: var(--white);
}

.search-button {
    position: absolute;
    right: 0.3rem;
    top: 0.3em;
    display: flex;
    align-items: center;
    justify-content: center;
    width: 2rem;
    height: 2rem;
    padding: 0;
    border: none;
    background: transparent;
    border: 2px solid var(--primary);
    border-radius: 50%;
    font-size: 1rem;
    color: var(--white);
    background-color: var(--primary);
    cursor: pointer;
    transform: translateY(5%);
    transition: all 0.3s ease;
}

.search-button:hover {
    color: white;
}

.filter-button {
    width: 2.5rem;
    height: 2.5rem;
    display: flex;
    align-items: center;
    justify-content: center;
    border-radius: 50%;
    border: 2px solid var(--primary);
    color: white;
    background-color: rgba(0, 0, 0, 0.8);
    cursor: pointer;
    transition: all 0.3s ease;
}

.filter-button[data-filter="all"]:hover {
    background-color: var(--primary-translucent);
}

.filter-button[data-filter="to-see"] {
    border-color: var(--primary);
    background-color: var(--primary);
    color: white;
}

.filter-button[data-filter="seen"] {
    border-color: var(--primary);
    background-color: var(--primary);
    color: white;
}

/* Tooltip in stile vignetta allineato a sinistra del bottone */
.filter-button[data-tooltip] {
    position: relative;
}

.filter-button[data-tooltip]::after {
    content: attr(data-tooltip);
    position: absolute;
    bottom: 130%;
    right: 0;
    background-color: var(--primary);
    color: white;
    padding: 6px 10px;
    border-radius: 8px;
    font-size: 0.75rem;
    white-space: nowrap;
    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
    opacity: 0;
    pointer-events: none;
    transition: opacity 0.3s ease;
    z-index: 10;
}

/* Mostra il tooltip al passaggio del mouse */
.filter-button:hover::after,
.filter-button:hover::before {
    opacity: 1;
}

main {
    height: 100vh;
    padding-top: 19vh;
    overflow-y: hidden;
}

/* Container Cards */
.movie-cards-container {
    display: flex;
    flex-direction: column;
    height: 100%;
    margin: 0 auto;
    padding: 0 1rem;
    gap: 1rem;
    overflow-y: auto;
}

.alphabet-letter-box {
    position: sticky;
    top: 0;
    width: 100%;
    line-height: 1;
    color: white;
    padding-bottom: 1.5rem;
    background-color: #1a1a1a;
    z-index: 2;
}

.alphabet-letter-box .alphabet-letter {
    text-align: center;
    width: 1.3rem;
    border-bottom: 2px solid var(--primary);
    font-size: 2rem;
    color: var(--white);
    cursor: pointer;
    text-decoration: none;
}

.alphabet-letter-box .alphabet-letter:hover {
    border-color: var(--white);
    color: var(--primary);
}

.movies-row {
    display: flex;
    flex-wrap: wrap;
    gap: 1.5rem;
    /* padding-left: 2rem; */
}

/* Stile delle Card */
.card-wrapper {
    position: relative;
    width: calc((100% / 6) - ((1.5rem * 5) / 6)); /* 6 card per riga */
    min-width: 150px;
    color: white;
    transition: transform 0.3s ease;
}

.card-content {
    position: relative;
    width: 100%;
    height: 0;
    margin-bottom: 0.5rem;
    padding-bottom: 150%; /* Mantiene l'aspect ratio */
    overflow: hidden;
    border: 2px solid transparent;
    border-radius: 8px;
    /* box-shadow: 0 8px 15px var(--primary-translucent); */
}

.card-content.highlighted {
    animation: highlight 5s ease-in-out infinite;
    border: 2px solid var(--primary);
}

@keyframes highlight {
    0% {
        box-shadow: 0 0 10px var(--primary-translucent);
    }
    20% {
        box-shadow: 0 0 30px var(--primary);
    }
    40% {
        box-shadow: 0 0 10px var(--primary-translucent);
    }
    60% {
        box-shadow: 0 0 30px var(--primary);
    }
    80% {
        box-shadow: 0 0 10px var(--primary-translucent);
    }
    100% {
        box-shadow: 0 0 30px var(--primary);
    }
}

.card-poster {
    position: absolute;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
}

.card-poster .loading-spinner {
    position: absolute;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
    z-index: 1;
    font-size: 2rem;
    color: var(--primary);
}

.card-poster.loaded .loading-spinner {
    display: none;
}

.card-poster img {
    width: 100%;
    height: 100%;
    object-fit: cover;
    transition: transform 0.3s ease;
}

.card-title {
    font-size: 1.1rem;
    font-weight: bold;
    text-align: center;
    padding: 0 5px;
    overflow: hidden;
}

/* Pulsante Visto/Non Visto */
.button-seen {
    position: absolute;
    top: 10px;
    right: 10px;
    display: flex;
    align-items: center;
    justify-content: center;
    width: 2rem;
    height: 2rem;
    border: none;
    border-radius: 50%;
    color: white;
    background: rgba(0, 0, 0, 0.7);
    cursor: pointer;
    z-index: 2;
    transition: all 0.2s ease;
}

.button-seen:hover {
    background-color: var(--primary-translucent);
}

.button-seen.seen {
    color: var(--white);
    background: var(--primary);
}

/* Contenitore dello spinner e testo di caricamento */
.loading-container {
    width: 100%;
    height: 100%;
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    background-color: rgba(0, 0, 0, 0.8);
    z-index: 1000;
    gap: 20px;
}

.loading-spinner {
    margin: 0 auto;
    width: 50px;
    height: 50px;
    border: 5px solid rgba(141, 141, 141, 0.2);
    border-top: 5px solid var(--primary);
    border-radius: 50%;
    animation: spin 1s linear infinite;
}

@keyframes spin {
    0% {
        transform: rotate(0deg);
    }
    100% {
        transform: rotate(360deg);
    }
}

.loading-text {
    color: rgba(141, 141, 141, 0.5);
    font-size: 1.2rem;
    text-align: center;
    max-width: 80%;
    margin: 0 auto;
}

/* Scrollbar personalizzata per la trama */
.plot-text::-webkit-scrollbar,
.modal-plot-text::-webkit-scrollbar {
    width: 5px;
}
/* ... */

